<resources>
    <string name="app_name">Zoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_crear">Crear</string>
    <string name="menu_eliminar">Eliminar</string>
    <string name="menu_creditos">Creditos</string>
    <string name="menu_modificar">Modificar</string>
    <string name="menu_listar">Listar</string>

    <string name="s_id">Id</string>
    <string name="s_nombre">Nombre del animal</string>
    <string name="s_sexo">Sexo</string>
    <string name="s_fechaingreso">Fecha de Ingreso</string>
    <string name="s_habitat">Habitat</string>
    <string name="s_alimentacion">Alimentacion</string>
    <string name="s_guardar">Guardar</string>
    <string name="s_limpiar">Limpiar</string>
    <string name="s_buscar">Buscar</string>
    <string name="s_eliminar">Eliminar</string>
    <string name="s_crear">Alta de animales</string>
    <string name="s_listar">Listado de animales</string>
    <string name="s_modificarA">Modificacion de datos</string>
    <string name="s_eliminarA">Eliminacion de datos</string>

    <number name="s_numero">000</number>

</resources>
