<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zoo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.zoo.ui.crear.CrearFragment"
        android:label="@string/menu_crear"
        tools:layout="@layout/fragment_crear" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.zoo.ui.eliminar.EliminarFragment"
        android:label="@string/menu_eliminar"
        tools:layout="@layout/fragment_eliminar" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.zoo.ui.creditos.CreditosFragment"
        android:label="@string/menu_creditos"
        tools:layout="@layout/fragment_creditos" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.zoo.ui.modificar.ModificarFragment"
        android:label="@string/menu_modificar"
        tools:layout="@layout/fragment_modificar" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.zoo.ui.listar.ListarFragment"
        android:label="@string/menu_listar"
        tools:layout="@layout/fragment_listar" />
</navigation>